objects/Account.object
<CustomObject>
    <fields>
        <fullName>Location_Vendor_Payments__c</fullName>
        <description>Payment terms for Acorn Location to Vendor</description>
        <label>Location Vendor Payments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DUE ON RECEIPT</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 20</fullName>
                </value>
                <value>
                    <fullName>Net 25</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 35</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 50</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 70</fullName>
                </value>
                <value>
                    <fullName>Net 75</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAS_Account_Number__c</fullName>
        <label>MAS Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAS_Integration_Date__c</fullName>
        <description>Date that Customer integrated with MAS</description>
        <label>MAS Integration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MAS_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account integration with MAS</description>
        <label>MAS Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSA_On_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSA On File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Area_Disposal_Deals__c</fullName>
        <label>Market Area Disposal Deals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Area_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Work awarded to 3rd Party regardless if WM is in the service area</description>
        <inlineHelpText>When checked indicates that this 3rd party supplier takes precedence over WM suppliers during supplier selection</inlineHelpText>
        <label>Market Area Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Area_VID__c</fullName>
        <label>Market Area VID</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Area__c</fullName>
        <description>Market Areas Vendor Operates</description>
        <label>Market Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Four Corners</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>WI/MN</fullName>
                </value>
                <value>
                    <fullName>Texoma</fullName>
                </value>
                <value>
                    <fullName>MI/OH/IN</fullName>
                </value>
                <value>
                    <fullName>Pacific Northwest</fullName>
                </value>
                <value>
                    <fullName>Greater Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>ATAK</fullName>
                </value>
                <value>
                    <fullName>Northern California</fullName>
                </value>
                <value>
                    <fullName>Southern California</fullName>
                </value>
                <value>
                    <fullName>WPA/WV/MD/VA</fullName>
                </value>
                <value>
                    <fullName>South Atlantic</fullName>
                </value>
                <value>
                    <fullName>IL/Missouri Valley</fullName>
                </value>
                <value>
                    <fullName>Gulf Coast</fullName>
                </value>
                <value>
                    <fullName>Western Canada</fullName>
                </value>
                <value>
                    <fullName>Eastern Canada</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <label>NAICS Description</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCC_Bale_Pickups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This denotes whether or not the vendor offers OCC Bale Pickup service</description>
        <label>OCC Bale Pickups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offers_Equipment_Installs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This denotes whether or not the vendor offers compactor installation</description>
        <label>Offers Equipment Installs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offers_Equipment_Rentals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This denotes whether or not the vendor offers equipment rentals.</description>
        <label>Offers Equipment Rentals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PO Required for the account</description>
        <label>PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSI_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If this field is checked then PSI field is mandatory while creating a case else its optional.</inlineHelpText>
        <label>Is PSI Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paperwork_Override__c</fullName>
        <label>Paperwork Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Schedule_A</fullName>
                    <label>Schedule A</label>
                </value>
                <value>
                    <fullName>Hauler_of_Record</fullName>
                    <label>Hauler of Record</label>
                </value>
                <value>
                    <fullName>Do_Not_Send</fullName>
                    <label>Do Not Send</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Vendor_ID__c</fullName>
        <description>Numeric ID assigned by the system to the parent vendor</description>
        <formula>Parent.Vendor_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Vendor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Methods__c</fullName>
        <label>Payment Methods</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pcard</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Electronic Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms_Type_II__c</fullName>
        <label>Payment Terms Type II</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net (1-100)</fullName>
                </value>
                <value>
                    <fullName>By(1st-31st,EOM)</fullName>
                </value>
                <value>
                    <fullName>Due on Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 7</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>15 of Month</fullName>
                </value>
                <value>
                    <fullName>End of Month</fullName>
                </value>
                <value>
                    <fullName>DUE ON RECEIPT</fullName>
                </value>
                <value>
                    <fullName>Net 1</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 20</fullName>
                </value>
                <value>
                    <fullName>Net 25</fullName>
                </value>
                <value>
                    <fullName>Net 35</fullName>
                </value>
                <value>
                    <fullName>Net 40</fullName>
                </value>
                <value>
                    <fullName>Net 5</fullName>
                </value>
                <value>
                    <fullName>Net 50</fullName>
                </value>
                <value>
                    <fullName>Net 55</fullName>
                </value>
                <value>
                    <fullName>Net 70</fullName>
                </value>
                <value>
                    <fullName>Net 23</fullName>
                </value>
                <value>
                    <fullName>Net 75</fullName>
                </value>
                <value>
                    <fullName>By</fullName>
                    <isActive>false</isActive>
                    <label>By</label>
                </value>
                <value>
                    <fullName>Net</fullName>
                    <isActive>false</isActive>
                    <label>Net</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permit_Fee_Required__c</fullName>
        <description>Permit Fee Required: Yes, No</description>
        <label>Permit Fee Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>Telephone Extension Number</description>
        <label>Phone Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Name__c</fullName>
        <label>Portal Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basecamp</fullName>
                </value>
                <value>
                    <fullName>Building Engines / Prism</fullName>
                </value>
                <value>
                    <fullName>Corrigo</fullName>
                </value>
                <value>
                    <fullName>Coupa</fullName>
                </value>
                <value>
                    <fullName>eBusiness</fullName>
                </value>
                <value>
                    <fullName>ECOBPM</fullName>
                </value>
                <value>
                    <fullName>FEXA</fullName>
                </value>
                <value>
                    <fullName>FMPilot</fullName>
                </value>
                <value>
                    <fullName>Maximo / PMWOA</fullName>
                </value>
                <value>
                    <fullName>Nest</fullName>
                </value>
                <value>
                    <fullName>Office Trax</fullName>
                </value>
                <value>
                    <fullName>RAMP</fullName>
                </value>
                <value>
                    <fullName>Ruscomp</fullName>
                </value>
                <value>
                    <fullName>Service Channel</fullName>
                </value>
                <value>
                    <fullName>Service Now</fullName>
                </value>
                <value>
                    <fullName>StaplesIQ</fullName>
                </value>
                <value>
                    <fullName>Tango</fullName>
                </value>
                <value>
                    <fullName>VAWS</fullName>
                </value>
                <value>
                    <fullName>Verisae</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Vendor__c</fullName>
        <label>Preferred Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>WMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prepayment_Required__c</fullName>
        <description>Prepayment Required, Yes, No</description>
        <label>Prepayment Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Name__c</fullName>
        <description>This allows the storage of the history of the vendor&apos;s previous names in case name changes occur due to mergers or acquisitions.</description>
        <label>Previous Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Segment__c</fullName>
        <label>Primary Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Commercial Property</fullName>
                </value>
                <value>
                    <fullName>Construction and Demolition</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Malls</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Inside Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Do Not Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_Estimations__c</fullName>
        <label>Quantity Estimations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remit_to_Email__c</fullName>
        <label>Remit to Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_Fax__c</fullName>
        <label>Remit to Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Remit_to_Phone__c</fullName>
        <label>Remit to Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Repair_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Vendor can do repairs</description>
        <label>Repair Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Billing_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The amount of days the customer can be back billed for the service</description>
        <label>Require Billing Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Branding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Branding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resale_Certificate__c</fullName>
        <description>Resale Certificate: Yes, No</description>
        <label>Resale Certificate Accepted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restriction__c</fullName>
        <label>Restriction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_A_Administrator_Email__c</fullName>
        <label>Schedule A Administrator Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_A_Administrator_Fax__c</fullName>
        <label>Schedule A Administrator Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Schedule_A_Administrator_Phone__c</fullName>
        <label>Schedule A Administrator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Schedule_A_Email_Acceptance__c</fullName>
        <label>Schedule A Email Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_A_Integration_Sys__c</fullName>
        <label>Schedule A Integration System</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Segment__c</fullName>
        <label>Secondary Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Commercial Property</fullName>
                </value>
                <value>
                    <fullName>Construction and Demolition</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Malls</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Inside Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Hardware And Home Improvement</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Small Format Value</fullName>
                </value>
                <value>
                    <fullName>Acute Hospitals</fullName>
                </value>
                <value>
                    <fullName>Auto Aftermarket</fullName>
                </value>
                <value>
                    <fullName>Convenience Stores</fullName>
                </value>
                <value>
                    <fullName>Department Store</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>E-Retailers</fullName>
                </value>
                <value>
                    <fullName>Finance Services And Life Care</fullName>
                </value>
                <value>
                    <fullName>Food Distribution</fullName>
                </value>
                <value>
                    <fullName>Food Service</fullName>
                </value>
                <value>
                    <fullName>General Apparel</fullName>
                </value>
                <value>
                    <fullName>General Healthcare And Related Services</fullName>
                </value>
                <value>
                    <fullName>Health And Beauty</fullName>
                </value>
                <value>
                    <fullName>Hobby And Craft</fullName>
                </value>
                <value>
                    <fullName>Home Goods</fullName>
                </value>
                <value>
                    <fullName>Long Term Care And Senior Living</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Service_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the customer self service (portal) eligible?</description>
        <label>Self Service Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Service_Eligible_picklist__c</fullName>
        <label>Self Service Eligible</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pickup Self Service Eligible</fullName>
                </value>
                <value>
                    <fullName>Status Self Service Eligible</fullName>
                </value>
                <value>
                    <fullName>New Service Self Service Eligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Window_End__c</fullName>
        <description>End of the time window when service should happen</description>
        <label>Service Window End</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Service_Window_Start__c</fullName>
        <label>Service Window Start</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <defaultValue>TIMEVALUE(&quot;09:00:00.000&quot;)</defaultValue>
        <label>StartTime</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <defaultValue>&apos;09:00:00.000&apos;</defaultValue>
        <label>Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>